# jx3-DrytronII

./: .env.dev  .env.prod  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: PushtoGitea.yml  main.yml
src/plugins/auto_chat/: __init__.py
src/plugins/bind/: __init__.py
src/plugins/jx3search/: __init__.py
src/plugins/jx3websocket/: __init__.py  collator.py  config.py  event.py  websocket.py
